[gd_scene load_steps=6 format=3 uid="uid://bjmyjuu8bgme2"]

[ext_resource type="PackedScene" uid="uid://b5360csvbeuqe" path="res://assets/3D/LevelItems/boton.glb" id="1_ahc0x"]
[ext_resource type="Script" path="res://scripts/items/interactable items/ButtonWithDoor.gd" id="1_gvdox"]
[ext_resource type="PackedScene" uid="uid://bnfw8lmui5j5p" path="res://assets/3D/LevelItems/fierro.glb" id="2_bj075"]
[ext_resource type="PackedScene" uid="uid://cbybw7c0veqad" path="res://scene/Base scenes/Interactable.tscn" id="3_k5ill"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8pof0"]
size = Vector3(1, 1, 0.538452)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_gvdox")

[node name="button" parent="." instance=ExtResource("1_ahc0x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.105719, 1.21088, 0.104514)

[node name="fierro" parent="." instance=ExtResource("2_bj075")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.58596, 1.19209e-07, 0.246053)

[node name="Interactable" parent="." instance=ExtResource("3_k5ill")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0808216, 1.52469, 0.266296)
shape = SubResource("BoxShape3D_8pof0")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
